--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VITE_APPWRITE_API_KEY=standard_5900947678a6c71ff50e92b1f3cc7e92affb54089f88def6c
 VITE_APPWRITE_DATABASE_ID=687a4d21000ec22db1d8
 VITE_APPWRITE_USERS_ID=687a4d570026e56953cf
 VITE_APPWRITE_TRIPS_ID=687a4da5000c108fe42d
-VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
