--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ VITE_APPWRITE_DATABASE_ID=687a4d21000ec22db1d8
 VITE_APPWRITE_USERS_ID=687a4d570026e56953cf
 VITE_APPWRITE_TRIPS_ID=687a4da5000c108fe42d
 VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
+GEMINI_API_KEY= AIzaSyD4HpveAp0fVhiCwjIsiX_TuuJB0YnxfR0
+UNSPLASH_ACCESS_KEY= kO50k33DJVNRaGNG6TVzOASwymNBo0vDblL_C90YWD0
